--- a/3.CSS/BOOTSTRAP/myStyle.css
+++ b/3.CSS/BOOTSTRAP/myStyle.css
@@ -9,6 +9,7 @@ html {
 
 .container-fluid {
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .carousel_container {
@@ -76,8 +77,8 @@ html {
   display: inline-block;
   margin: 0 auto;
   padding-top: 0px;
-  padding-bottom: 20px;
-  width: 70%;
+  padding-bottom: 10px;
+  width: 100%;
 }
 
 img {
@@ -156,7 +157,7 @@ input[type=submit]{
 }
 
 #zynagraphy {
-  font-size: 280%;
+  font-size: 250px;
 }
 
 .action-button
@@ -167,7 +168,7 @@ input[type=submit]{
     float: left;
     border-radius: 10px;
     font-family: 'Pacifico', cursive;
-    font-size: 30px;
+    font-size: -webkit-xxx-large;
     color: #FFF;
     text-decoration: none;  
 }
